--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>iay's github pages</title>
+        <title>iay's github pages &raquo; {{ page.title }}</title>
     </head>
     <body>
         {{ content }}
